compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    LBRACKET
    RBRACKET

Grammar

Rule 0     S' -> program
Rule 1     n_seen_type -> <empty>
Rule 2     n_open_new_scope -> <empty>
Rule 3     n_close_scope -> <empty>
Rule 4     n_name -> <empty>
Rule 5     n_math_expression_1 -> <empty>
Rule 6     n_math_expression_2 -> <empty>
Rule 7     n_math_expression_3 -> <empty>
Rule 8     n_math_expression_4 -> <empty>
Rule 9     n_math_expression_5 -> <empty>
Rule 10    n_math_expression_6 -> <empty>
Rule 11    n_math_expression_7 -> <empty>
Rule 12    n_math_expression_8 -> <empty>
Rule 13    n_math_expression_9 -> <empty>
Rule 14    empty -> <empty>
Rule 15    program -> program_aux codeblock
Rule 16    program_aux -> IDK
Rule 17    program_aux -> OWO
Rule 18    type -> INT_TYPE n_seen_type
Rule 19    type -> STRING_TYPE n_seen_type
Rule 20    type -> DOUBLE_TYPE n_seen_type
Rule 21    type -> FLOAT_TYPE n_seen_type
Rule 22    type -> BOOL_TYPE n_seen_type
Rule 23    relational_operator -> GREATERTHAN n_math_expression_8
Rule 24    relational_operator -> LESSTHAN n_math_expression_8
Rule 25    relational_operator -> EQUALEQUAL n_math_expression_8
Rule 26    relational_operator -> LESSTHANOREQUAL n_math_expression_8
Rule 27    relational_operator -> GREATERTHANOREQUAL n_math_expression_8
Rule 28    relational_operator -> NOTEQUAL n_math_expression_8
Rule 29    logical_operator -> AND
Rule 30    logical_operator -> OR
Rule 31    logical_operator -> NOT
Rule 32    arithmetic_operator -> PLUS
Rule 33    arithmetic_operator -> MINUS
Rule 34    arithmetic_operator -> TIMES
Rule 35    arithmetic_operator -> DIVIDE
Rule 36    arithmetic_operator -> MODULUS
Rule 37    literal -> FLOAT n_math_expression_1
Rule 38    literal -> INT n_math_expression_1
Rule 39    literal -> STRING n_math_expression_1
Rule 40    function_type -> type
Rule 41    function_type -> VOID
Rule 42    function_definition -> FUNCTION NAME n_open_new_scope parameter_list DOUBLEDOT function_type LCURLY codeblock RCURLY n_close_scope
Rule 43    function_call -> NAME LPARENTHESIS parameter_list RPARENTHESIS
Rule 44    parameter_list -> empty
Rule 45    parameter_list -> parameter
Rule 46    parameter_list -> parameter COMMA parameter_list
Rule 47    parameter -> type NAME n_name
Rule 48    parameter -> assign
Rule 49    expression -> expression_or
Rule 50    expression -> expression_or AND expression
Rule 51    expression_or -> expression_rel
Rule 52    expression_or -> expression_rel OR expression_or
Rule 53    expression_rel -> exp
Rule 54    expression_rel -> exp relational_operator exp n_math_expression_9
Rule 55    exp -> termino n_math_expression_4
Rule 56    exp -> termino n_math_expression_4 PLUS n_math_expression_2 exp
Rule 57    exp -> termino n_math_expression_4 MINUS n_math_expression_2 exp
Rule 58    termino -> factor n_math_expression_5
Rule 59    termino -> factor n_math_expression_5 TIMES n_math_expression_3 termino
Rule 60    termino -> factor n_math_expression_5 DIVIDE n_math_expression_3 termino
Rule 61    factor -> LPARENTHESIS n_math_expression_6 expression RPARENTHESIS n_math_expression_7
Rule 62    factor -> PLUS value
Rule 63    factor -> MINUS value
Rule 64    factor -> value
Rule 65    value -> function_call
Rule 66    value -> literal
Rule 67    value -> NAME n_math_expression_1
Rule 68    assign -> type NAME n_name EQUAL expression
Rule 69    assign -> NAME n_name EQUAL expression
Rule 70    statement -> statement_aux SEMICOLON
Rule 71    statement_aux -> assign
Rule 72    statement_aux -> function_call
Rule 73    codeblock -> empty
Rule 74    codeblock -> codeblock_aux codeblock
Rule 75    codeblock_aux -> statement
Rule 76    codeblock_aux -> function_definition
Rule 77    codeblock_aux -> condition_if
Rule 78    codeblock_aux -> loop
Rule 79    loop -> forloop
Rule 80    loop -> whileloop
Rule 81    whileloop -> WHILE LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope
Rule 82    forloop -> FOR LPARENTHESIS n_open_new_scope assign DOUBLEDOT expression DOUBLEDOT assign RPARENTHESIS LCURLY codeblock RCURLY n_close_scope
Rule 83    condition_if -> IF LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope condition_else
Rule 84    condition_else -> ELSE LCURLY n_open_new_scope codeblock RCURLY n_close_scope
Rule 85    condition_else -> empty

Terminals, with rules where they appear

AND                  : 29 50
BOOL_TYPE            : 22
COMMA                : 46
DIVIDE               : 35 60
DOT                  : 
DOUBLEDOT            : 42 82 82
DOUBLE_TYPE          : 20
ELSE                 : 84
EQUAL                : 68 69
EQUALEQUAL           : 25
FLOAT                : 37
FLOAT_TYPE           : 21
FOR                  : 82
FUNCTION             : 42
GREATERTHAN          : 23
GREATERTHANOREQUAL   : 27
IDK                  : 16
IF                   : 83
INT                  : 38
INT_TYPE             : 18
LBRACKET             : 
LCURLY               : 42 81 82 83 84
LESSTHAN             : 24
LESSTHANOREQUAL      : 26
LPARENTHESIS         : 43 61 81 82 83
MINUS                : 33 57 63
MODULUS              : 36
NAME                 : 42 43 47 67 68 69
NOT                  : 31
NOTEQUAL             : 28
OR                   : 30 52
OWO                  : 17
PLUS                 : 32 56 62
RBRACKET             : 
RCURLY               : 42 81 82 83 84
RPARENTHESIS         : 43 61 81 82 83
SEMICOLON            : 70
STRING               : 39
STRING_TYPE          : 19
TIMES                : 34 59
VOID                 : 41
WHILE                : 81
error                : 

Nonterminals, with rules where they appear

arithmetic_operator  : 
assign               : 48 71 82 82
codeblock            : 15 42 74 81 82 83 84
codeblock_aux        : 74
condition_else       : 83
condition_if         : 77
empty                : 44 73 85
exp                  : 53 54 54 56 57
expression           : 50 61 68 69 81 82 83
expression_or        : 49 50 52
expression_rel       : 51 52
factor               : 58 59 60
forloop              : 79
function_call        : 65 72
function_definition  : 76
function_type        : 42
literal              : 66
logical_operator     : 
loop                 : 78
n_close_scope        : 42 81 82 83 84
n_math_expression_1  : 37 38 39 67
n_math_expression_2  : 56 57
n_math_expression_3  : 59 60
n_math_expression_4  : 55 56 57
n_math_expression_5  : 58 59 60
n_math_expression_6  : 61
n_math_expression_7  : 61
n_math_expression_8  : 23 24 25 26 27 28
n_math_expression_9  : 54
n_name               : 47 68 69
n_open_new_scope     : 42 81 82 83 84
n_seen_type          : 18 19 20 21 22
parameter            : 45 46
parameter_list       : 42 43 46
program              : 0
program_aux          : 15
relational_operator  : 54
statement            : 75
statement_aux        : 70
termino              : 55 56 57 59 60
type                 : 40 47 68
value                : 62 63 64
whileloop            : 80

Parsing method: LALR

state 0

    (0) S' -> . program
    (15) program -> . program_aux codeblock
    (16) program_aux -> . IDK
    (17) program_aux -> . OWO

    IDK             shift and go to state 3
    OWO             shift and go to state 4

    program                        shift and go to state 1
    program_aux                    shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (15) program -> program_aux . codeblock
    (73) codeblock -> . empty
    (74) codeblock -> . codeblock_aux codeblock
    (14) empty -> .
    (75) codeblock_aux -> . statement
    (76) codeblock_aux -> . function_definition
    (77) codeblock_aux -> . condition_if
    (78) codeblock_aux -> . loop
    (70) statement -> . statement_aux SEMICOLON
    (42) function_definition -> . FUNCTION NAME n_open_new_scope parameter_list DOUBLEDOT function_type LCURLY codeblock RCURLY n_close_scope
    (83) condition_if -> . IF LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope condition_else
    (79) loop -> . forloop
    (80) loop -> . whileloop
    (71) statement_aux -> . assign
    (72) statement_aux -> . function_call
    (82) forloop -> . FOR LPARENTHESIS n_open_new_scope assign DOUBLEDOT expression DOUBLEDOT assign RPARENTHESIS LCURLY codeblock RCURLY n_close_scope
    (81) whileloop -> . WHILE LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope
    (68) assign -> . type NAME n_name EQUAL expression
    (69) assign -> . NAME n_name EQUAL expression
    (43) function_call -> . NAME LPARENTHESIS parameter_list RPARENTHESIS
    (18) type -> . INT_TYPE n_seen_type
    (19) type -> . STRING_TYPE n_seen_type
    (20) type -> . DOUBLE_TYPE n_seen_type
    (21) type -> . FLOAT_TYPE n_seen_type
    (22) type -> . BOOL_TYPE n_seen_type

    $end            reduce using rule 14 (empty -> .)
    FUNCTION        shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    NAME            shift and go to state 14
    INT_TYPE        shift and go to state 23
    STRING_TYPE     shift and go to state 24
    DOUBLE_TYPE     shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    codeblock                      shift and go to state 5
    empty                          shift and go to state 6
    codeblock_aux                  shift and go to state 7
    statement                      shift and go to state 8
    function_definition            shift and go to state 9
    condition_if                   shift and go to state 10
    loop                           shift and go to state 11
    statement_aux                  shift and go to state 12
    forloop                        shift and go to state 16
    whileloop                      shift and go to state 17
    assign                         shift and go to state 18
    function_call                  shift and go to state 19
    type                           shift and go to state 22

state 3

    (16) program_aux -> IDK .

    FUNCTION        reduce using rule 16 (program_aux -> IDK .)
    IF              reduce using rule 16 (program_aux -> IDK .)
    FOR             reduce using rule 16 (program_aux -> IDK .)
    WHILE           reduce using rule 16 (program_aux -> IDK .)
    NAME            reduce using rule 16 (program_aux -> IDK .)
    INT_TYPE        reduce using rule 16 (program_aux -> IDK .)
    STRING_TYPE     reduce using rule 16 (program_aux -> IDK .)
    DOUBLE_TYPE     reduce using rule 16 (program_aux -> IDK .)
    FLOAT_TYPE      reduce using rule 16 (program_aux -> IDK .)
    BOOL_TYPE       reduce using rule 16 (program_aux -> IDK .)
    $end            reduce using rule 16 (program_aux -> IDK .)


state 4

    (17) program_aux -> OWO .

    FUNCTION        reduce using rule 17 (program_aux -> OWO .)
    IF              reduce using rule 17 (program_aux -> OWO .)
    FOR             reduce using rule 17 (program_aux -> OWO .)
    WHILE           reduce using rule 17 (program_aux -> OWO .)
    NAME            reduce using rule 17 (program_aux -> OWO .)
    INT_TYPE        reduce using rule 17 (program_aux -> OWO .)
    STRING_TYPE     reduce using rule 17 (program_aux -> OWO .)
    DOUBLE_TYPE     reduce using rule 17 (program_aux -> OWO .)
    FLOAT_TYPE      reduce using rule 17 (program_aux -> OWO .)
    BOOL_TYPE       reduce using rule 17 (program_aux -> OWO .)
    $end            reduce using rule 17 (program_aux -> OWO .)


state 5

    (15) program -> program_aux codeblock .

    $end            reduce using rule 15 (program -> program_aux codeblock .)


state 6

    (73) codeblock -> empty .

    $end            reduce using rule 73 (codeblock -> empty .)
    RCURLY          reduce using rule 73 (codeblock -> empty .)


state 7

    (74) codeblock -> codeblock_aux . codeblock
    (73) codeblock -> . empty
    (74) codeblock -> . codeblock_aux codeblock
    (14) empty -> .
    (75) codeblock_aux -> . statement
    (76) codeblock_aux -> . function_definition
    (77) codeblock_aux -> . condition_if
    (78) codeblock_aux -> . loop
    (70) statement -> . statement_aux SEMICOLON
    (42) function_definition -> . FUNCTION NAME n_open_new_scope parameter_list DOUBLEDOT function_type LCURLY codeblock RCURLY n_close_scope
    (83) condition_if -> . IF LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope condition_else
    (79) loop -> . forloop
    (80) loop -> . whileloop
    (71) statement_aux -> . assign
    (72) statement_aux -> . function_call
    (82) forloop -> . FOR LPARENTHESIS n_open_new_scope assign DOUBLEDOT expression DOUBLEDOT assign RPARENTHESIS LCURLY codeblock RCURLY n_close_scope
    (81) whileloop -> . WHILE LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope
    (68) assign -> . type NAME n_name EQUAL expression
    (69) assign -> . NAME n_name EQUAL expression
    (43) function_call -> . NAME LPARENTHESIS parameter_list RPARENTHESIS
    (18) type -> . INT_TYPE n_seen_type
    (19) type -> . STRING_TYPE n_seen_type
    (20) type -> . DOUBLE_TYPE n_seen_type
    (21) type -> . FLOAT_TYPE n_seen_type
    (22) type -> . BOOL_TYPE n_seen_type

    $end            reduce using rule 14 (empty -> .)
    RCURLY          reduce using rule 14 (empty -> .)
    FUNCTION        shift and go to state 13
    IF              shift and go to state 15
    FOR             shift and go to state 20
    WHILE           shift and go to state 21
    NAME            shift and go to state 14
    INT_TYPE        shift and go to state 23
    STRING_TYPE     shift and go to state 24
    DOUBLE_TYPE     shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27

    codeblock_aux                  shift and go to state 7
    codeblock                      shift and go to state 28
    empty                          shift and go to state 6
    statement                      shift and go to state 8
    function_definition            shift and go to state 9
    condition_if                   shift and go to state 10
    loop                           shift and go to state 11
    statement_aux                  shift and go to state 12
    forloop                        shift and go to state 16
    whileloop                      shift and go to state 17
    assign                         shift and go to state 18
    function_call                  shift and go to state 19
    type                           shift and go to state 22

state 8

    (75) codeblock_aux -> statement .

    FUNCTION        reduce using rule 75 (codeblock_aux -> statement .)
    IF              reduce using rule 75 (codeblock_aux -> statement .)
    FOR             reduce using rule 75 (codeblock_aux -> statement .)
    WHILE           reduce using rule 75 (codeblock_aux -> statement .)
    NAME            reduce using rule 75 (codeblock_aux -> statement .)
    INT_TYPE        reduce using rule 75 (codeblock_aux -> statement .)
    STRING_TYPE     reduce using rule 75 (codeblock_aux -> statement .)
    DOUBLE_TYPE     reduce using rule 75 (codeblock_aux -> statement .)
    FLOAT_TYPE      reduce using rule 75 (codeblock_aux -> statement .)
    BOOL_TYPE       reduce using rule 75 (codeblock_aux -> statement .)
    $end            reduce using rule 75 (codeblock_aux -> statement .)
    RCURLY          reduce using rule 75 (codeblock_aux -> statement .)


state 9

    (76) codeblock_aux -> function_definition .

    FUNCTION        reduce using rule 76 (codeblock_aux -> function_definition .)
    IF              reduce using rule 76 (codeblock_aux -> function_definition .)
    FOR             reduce using rule 76 (codeblock_aux -> function_definition .)
    WHILE           reduce using rule 76 (codeblock_aux -> function_definition .)
    NAME            reduce using rule 76 (codeblock_aux -> function_definition .)
    INT_TYPE        reduce using rule 76 (codeblock_aux -> function_definition .)
    STRING_TYPE     reduce using rule 76 (codeblock_aux -> function_definition .)
    DOUBLE_TYPE     reduce using rule 76 (codeblock_aux -> function_definition .)
    FLOAT_TYPE      reduce using rule 76 (codeblock_aux -> function_definition .)
    BOOL_TYPE       reduce using rule 76 (codeblock_aux -> function_definition .)
    $end            reduce using rule 76 (codeblock_aux -> function_definition .)
    RCURLY          reduce using rule 76 (codeblock_aux -> function_definition .)


state 10

    (77) codeblock_aux -> condition_if .

    FUNCTION        reduce using rule 77 (codeblock_aux -> condition_if .)
    IF              reduce using rule 77 (codeblock_aux -> condition_if .)
    FOR             reduce using rule 77 (codeblock_aux -> condition_if .)
    WHILE           reduce using rule 77 (codeblock_aux -> condition_if .)
    NAME            reduce using rule 77 (codeblock_aux -> condition_if .)
    INT_TYPE        reduce using rule 77 (codeblock_aux -> condition_if .)
    STRING_TYPE     reduce using rule 77 (codeblock_aux -> condition_if .)
    DOUBLE_TYPE     reduce using rule 77 (codeblock_aux -> condition_if .)
    FLOAT_TYPE      reduce using rule 77 (codeblock_aux -> condition_if .)
    BOOL_TYPE       reduce using rule 77 (codeblock_aux -> condition_if .)
    $end            reduce using rule 77 (codeblock_aux -> condition_if .)
    RCURLY          reduce using rule 77 (codeblock_aux -> condition_if .)


state 11

    (78) codeblock_aux -> loop .

    FUNCTION        reduce using rule 78 (codeblock_aux -> loop .)
    IF              reduce using rule 78 (codeblock_aux -> loop .)
    FOR             reduce using rule 78 (codeblock_aux -> loop .)
    WHILE           reduce using rule 78 (codeblock_aux -> loop .)
    NAME            reduce using rule 78 (codeblock_aux -> loop .)
    INT_TYPE        reduce using rule 78 (codeblock_aux -> loop .)
    STRING_TYPE     reduce using rule 78 (codeblock_aux -> loop .)
    DOUBLE_TYPE     reduce using rule 78 (codeblock_aux -> loop .)
    FLOAT_TYPE      reduce using rule 78 (codeblock_aux -> loop .)
    BOOL_TYPE       reduce using rule 78 (codeblock_aux -> loop .)
    $end            reduce using rule 78 (codeblock_aux -> loop .)
    RCURLY          reduce using rule 78 (codeblock_aux -> loop .)


state 12

    (70) statement -> statement_aux . SEMICOLON

    SEMICOLON       shift and go to state 29


state 13

    (42) function_definition -> FUNCTION . NAME n_open_new_scope parameter_list DOUBLEDOT function_type LCURLY codeblock RCURLY n_close_scope

    NAME            shift and go to state 30


state 14

    (69) assign -> NAME . n_name EQUAL expression
    (43) function_call -> NAME . LPARENTHESIS parameter_list RPARENTHESIS
    (4) n_name -> .

    LPARENTHESIS    shift and go to state 32
    EQUAL           reduce using rule 4 (n_name -> .)

    n_name                         shift and go to state 31

state 15

    (83) condition_if -> IF . LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope condition_else

    LPARENTHESIS    shift and go to state 33


state 16

    (79) loop -> forloop .

    FUNCTION        reduce using rule 79 (loop -> forloop .)
    IF              reduce using rule 79 (loop -> forloop .)
    FOR             reduce using rule 79 (loop -> forloop .)
    WHILE           reduce using rule 79 (loop -> forloop .)
    NAME            reduce using rule 79 (loop -> forloop .)
    INT_TYPE        reduce using rule 79 (loop -> forloop .)
    STRING_TYPE     reduce using rule 79 (loop -> forloop .)
    DOUBLE_TYPE     reduce using rule 79 (loop -> forloop .)
    FLOAT_TYPE      reduce using rule 79 (loop -> forloop .)
    BOOL_TYPE       reduce using rule 79 (loop -> forloop .)
    $end            reduce using rule 79 (loop -> forloop .)
    RCURLY          reduce using rule 79 (loop -> forloop .)


state 17

    (80) loop -> whileloop .

    FUNCTION        reduce using rule 80 (loop -> whileloop .)
    IF              reduce using rule 80 (loop -> whileloop .)
    FOR             reduce using rule 80 (loop -> whileloop .)
    WHILE           reduce using rule 80 (loop -> whileloop .)
    NAME            reduce using rule 80 (loop -> whileloop .)
    INT_TYPE        reduce using rule 80 (loop -> whileloop .)
    STRING_TYPE     reduce using rule 80 (loop -> whileloop .)
    DOUBLE_TYPE     reduce using rule 80 (loop -> whileloop .)
    FLOAT_TYPE      reduce using rule 80 (loop -> whileloop .)
    BOOL_TYPE       reduce using rule 80 (loop -> whileloop .)
    $end            reduce using rule 80 (loop -> whileloop .)
    RCURLY          reduce using rule 80 (loop -> whileloop .)


state 18

    (71) statement_aux -> assign .

    SEMICOLON       reduce using rule 71 (statement_aux -> assign .)


state 19

    (72) statement_aux -> function_call .

    SEMICOLON       reduce using rule 72 (statement_aux -> function_call .)


state 20

    (82) forloop -> FOR . LPARENTHESIS n_open_new_scope assign DOUBLEDOT expression DOUBLEDOT assign RPARENTHESIS LCURLY codeblock RCURLY n_close_scope

    LPARENTHESIS    shift and go to state 34


state 21

    (81) whileloop -> WHILE . LPARENTHESIS expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope

    LPARENTHESIS    shift and go to state 35


state 22

    (68) assign -> type . NAME n_name EQUAL expression

    NAME            shift and go to state 36


state 23

    (18) type -> INT_TYPE . n_seen_type
    (1) n_seen_type -> .

    NAME            reduce using rule 1 (n_seen_type -> .)
    LCURLY          reduce using rule 1 (n_seen_type -> .)

    n_seen_type                    shift and go to state 37

state 24

    (19) type -> STRING_TYPE . n_seen_type
    (1) n_seen_type -> .

    NAME            reduce using rule 1 (n_seen_type -> .)
    LCURLY          reduce using rule 1 (n_seen_type -> .)

    n_seen_type                    shift and go to state 38

state 25

    (20) type -> DOUBLE_TYPE . n_seen_type
    (1) n_seen_type -> .

    NAME            reduce using rule 1 (n_seen_type -> .)
    LCURLY          reduce using rule 1 (n_seen_type -> .)

    n_seen_type                    shift and go to state 39

state 26

    (21) type -> FLOAT_TYPE . n_seen_type
    (1) n_seen_type -> .

    NAME            reduce using rule 1 (n_seen_type -> .)
    LCURLY          reduce using rule 1 (n_seen_type -> .)

    n_seen_type                    shift and go to state 40

state 27

    (22) type -> BOOL_TYPE . n_seen_type
    (1) n_seen_type -> .

    NAME            reduce using rule 1 (n_seen_type -> .)
    LCURLY          reduce using rule 1 (n_seen_type -> .)

    n_seen_type                    shift and go to state 41

state 28

    (74) codeblock -> codeblock_aux codeblock .

    $end            reduce using rule 74 (codeblock -> codeblock_aux codeblock .)
    RCURLY          reduce using rule 74 (codeblock -> codeblock_aux codeblock .)


state 29

    (70) statement -> statement_aux SEMICOLON .

    FUNCTION        reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    IF              reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    FOR             reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    WHILE           reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    NAME            reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    INT_TYPE        reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    STRING_TYPE     reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    DOUBLE_TYPE     reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    FLOAT_TYPE      reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    BOOL_TYPE       reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    $end            reduce using rule 70 (statement -> statement_aux SEMICOLON .)
    RCURLY          reduce using rule 70 (statement -> statement_aux SEMICOLON .)


state 30

    (42) function_definition -> FUNCTION NAME . n_open_new_scope parameter_list DOUBLEDOT function_type LCURLY codeblock RCURLY n_close_scope
    (2) n_open_new_scope -> .

    INT_TYPE        reduce using rule 2 (n_open_new_scope -> .)
    STRING_TYPE     reduce using rule 2 (n_open_new_scope -> .)
    DOUBLE_TYPE     reduce using rule 2 (n_open_new_scope -> .)
    FLOAT_TYPE      reduce using rule 2 (n_open_new_scope -> .)
    BOOL_TYPE       reduce using rule 2 (n_open_new_scope -> .)
    NAME            reduce using rule 2 (n_open_new_scope -> .)
    DOUBLEDOT       reduce using rule 2 (n_open_new_scope -> .)

    n_open_new_scope               shift and go to state 42

state 31

    (69) assign -> NAME n_name . EQUAL expression

    EQUAL           shift and go to state 43


state 32

    (43) function_call -> NAME LPARENTHESIS . parameter_list RPARENTHESIS
    (44) parameter_list -> . empty
    (45) parameter_list -> . parameter
    (46) parameter_list -> . parameter COMMA parameter_list
    (14) empty -> .
    (47) parameter -> . type NAME n_name
    (48) parameter -> . assign
    (18) type -> . INT_TYPE n_seen_type
    (19) type -> . STRING_TYPE n_seen_type
    (20) type -> . DOUBLE_TYPE n_seen_type
    (21) type -> . FLOAT_TYPE n_seen_type
    (22) type -> . BOOL_TYPE n_seen_type
    (68) assign -> . type NAME n_name EQUAL expression
    (69) assign -> . NAME n_name EQUAL expression

    RPARENTHESIS    reduce using rule 14 (empty -> .)
    INT_TYPE        shift and go to state 23
    STRING_TYPE     shift and go to state 24
    DOUBLE_TYPE     shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    NAME            shift and go to state 44

    parameter_list                 shift and go to state 45
    empty                          shift and go to state 46
    parameter                      shift and go to state 47
    type                           shift and go to state 48
    assign                         shift and go to state 49

state 33

    (83) condition_if -> IF LPARENTHESIS . expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope condition_else
    (49) expression -> . expression_or
    (50) expression -> . expression_or AND expression
    (51) expression_or -> . expression_rel
    (52) expression_or -> . expression_rel OR expression_or
    (53) expression_rel -> . exp
    (54) expression_rel -> . exp relational_operator exp n_math_expression_9
    (55) exp -> . termino n_math_expression_4
    (56) exp -> . termino n_math_expression_4 PLUS n_math_expression_2 exp
    (57) exp -> . termino n_math_expression_4 MINUS n_math_expression_2 exp
    (58) termino -> . factor n_math_expression_5
    (59) termino -> . factor n_math_expression_5 TIMES n_math_expression_3 termino
    (60) termino -> . factor n_math_expression_5 DIVIDE n_math_expression_3 termino
    (61) factor -> . LPARENTHESIS n_math_expression_6 expression RPARENTHESIS n_math_expression_7
    (62) factor -> . PLUS value
    (63) factor -> . MINUS value
    (64) factor -> . value
    (65) value -> . function_call
    (66) value -> . literal
    (67) value -> . NAME n_math_expression_1
    (43) function_call -> . NAME LPARENTHESIS parameter_list RPARENTHESIS
    (37) literal -> . FLOAT n_math_expression_1
    (38) literal -> . INT n_math_expression_1
    (39) literal -> . STRING n_math_expression_1

    LPARENTHESIS    shift and go to state 50
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    NAME            shift and go to state 62
    FLOAT           shift and go to state 63
    INT             shift and go to state 64
    STRING          shift and go to state 65

    expression                     shift and go to state 51
    expression_or                  shift and go to state 52
    expression_rel                 shift and go to state 53
    exp                            shift and go to state 54
    termino                        shift and go to state 55
    factor                         shift and go to state 58
    value                          shift and go to state 59
    function_call                  shift and go to state 60
    literal                        shift and go to state 61

state 34

    (82) forloop -> FOR LPARENTHESIS . n_open_new_scope assign DOUBLEDOT expression DOUBLEDOT assign RPARENTHESIS LCURLY codeblock RCURLY n_close_scope
    (2) n_open_new_scope -> .

    NAME            reduce using rule 2 (n_open_new_scope -> .)
    INT_TYPE        reduce using rule 2 (n_open_new_scope -> .)
    STRING_TYPE     reduce using rule 2 (n_open_new_scope -> .)
    DOUBLE_TYPE     reduce using rule 2 (n_open_new_scope -> .)
    FLOAT_TYPE      reduce using rule 2 (n_open_new_scope -> .)
    BOOL_TYPE       reduce using rule 2 (n_open_new_scope -> .)

    n_open_new_scope               shift and go to state 66

state 35

    (81) whileloop -> WHILE LPARENTHESIS . expression RPARENTHESIS LCURLY n_open_new_scope codeblock RCURLY n_close_scope
    (49) expression -> . expression_or
    (50) expression -> . expression_or AND expression
    (51) expression_or -> . expression_rel
    (52) expression_or -> . expression_rel OR expression_or
    (53) expression_rel -> . exp
    (54) expression_rel -> . exp relational_operator exp n_math_expression_9
    (55) exp -> . termino n_math_expression_4
    (56) exp -> . termino n_math_expression_4 PLUS n_math_expression_2 exp
    (57) exp -> . termino n_math_expression_4 MINUS n_math_expression_2 exp
    (58) termino -> . factor n_math_expression_5
    (59) termino -> . factor n_math_expression_5 TIMES n_math_expression_3 termino
    (60) termino -> . factor n_math_expression_5 DIVIDE n_math_expression_3 termino
    (61) factor -> . LPARENTHESIS n_math_expression_6 expression RPARENTHESIS n_math_expression_7
    (62) factor -> . PLUS value
    (63) factor -> . MINUS value
    (64) factor -> . value
    (65) value -> . function_call
    (66) value -> . literal
    (67) value -> . NAME n_math_expression_1
    (43) function_call -> . NAME LPARENTHESIS parameter_list RPARENTHESIS
    (37) literal -> . FLOAT n_math_expression_1
    (38) literal -> . INT n_math_expression_1
    (39) literal -> . STRING n_math_expression_1

    LPARENTHESIS    shift and go to state 50
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57
    NAME            shift and go to state 62
    FLOAT           shift and go to state 63
    INT             shift and go to state 64
    STRING          shift and go to state 65

    expression                     shift and go to state 67
    expression_or                  shift and go to state 52
    expression_rel                 shift and go to state 53
    exp                            shift and go to state 54
    termino                        shift and go to state 55
    factor                         shift and go to state 58
    value                          shift and go to state 59
    function_call                  shift and go to state 60
    literal                        shift and go to state 61

state 36

    (68) assign -> type NAME . n_name EQUAL expression
    (4) n_name -> .

    EQUAL           reduce using rule 4 (n_name -> .)

    n_name                         shift and go to state 68

state 37

    (18) type -> INT_TYPE n_seen_type .

    NAME            reduce using rule 18 (type -> INT_TYPE n_seen_type .)
    LCURLY          reduce using rule 18 (type -> INT_TYPE n_seen_type .)


state 38

    (19) type -> STRING_TYPE n_seen_type .

    NAME            reduce using rule 19 (type -> STRING_TYPE n_seen_type .)
    LCURLY          reduce using rule 19 (type -> STRING_TYPE n_seen_type .)


state 39

    (20) type -> DOUBLE_TYPE n_seen_type .

    NAME            reduce using rule 20 (type -> DOUBLE_TYPE n_seen_type .)
    LCURLY          reduce using rule 20 (type -> DOUBLE_TYPE n_seen_type .)


state 40

    (21) type -> FLOAT_TYPE n_seen_type .

    NAME            reduce using rule 21 (type -> FLOAT_TYPE n_seen_type .)
    LCURLY          reduce using rule 21 (type -> FLOAT_TYPE n_seen_type .)


state 41

    (22) type -> BOOL_TYPE n_seen_type .

    NAME            reduce using rule 22 (type -> BOOL_TYPE n_seen_type .)
    LCURLY          reduce using rule 22 (type -> BOOL_TYPE n_seen_type .)


state 42

    (42) function_definition -> FUNCTION NAME n_open_new_scope . parameter_list DOUBLEDOT function_type LCURLY codeblock RCURLY n_close_scope
    (44) parameter_list -> . empty
    (45) parameter_list -> . parameter
    (46) parameter_list -> . parameter COMMA parameter_list
    (14) empty -> .
    (47) parameter -> . type NAME n_name
    (48) parameter -> . assign
    (18) type -> . INT_TYPE n_seen_type
    (19) type -> . STRING_TYPE n_seen_type
    (20) type -> . DOUBLE_TYPE n_seen_type
    (21) type -> . FLOAT_TYPE n_seen_type
    (22) type -> . BOOL_TYPE n_seen_type
    (68) assign -> . type NAME n_name EQUAL expression
    (69) assign -> . NAME n_name EQUAL expression

    DOUBLEDOT       reduce using rule 14 (empty -> .)
    INT_TYPE        shift and go to state 23
    STRING_TYPE     shift and go to state 24
    DOUBLE_TYPE     shift and go to state 25
    FLOAT_TYPE      shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    NAME            shift and go to state 44

    parameter_list                 shift and go to state 69
    empty                          shift and go to state 46
    parameter                      shift and go to state 47
    type                           shift and go to state 48
    assign                         shift and go to state 49

state 43
